<resources>
    <string name="app_name">Runebound 3 Coin</string>
    <string name="changeLang">Language</string>
    <string name="startButton">Start</string>
    <string name="english">english</string>
    <string name="polish">polish</string>
    <string name="accept">accept</string>
    <string name="title_activity_hero_setup">HeroSetupActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="heroname">heroName</string>
    <string name="playername">playerName</string>
    <string name="pickHero">pick a hero</string>
</resources>