<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".gameFlow.MainActivity">

    <Button
        android:id="@+id/langButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="184dp"
        android:layout_marginEnd="72dp"
        android:layout_marginRight="72dp"
        android:onClick="showChangeLanguageRadio"
        android:text="@string/changeLang"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/startButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="156dp"
        android:layout_marginRight="156dp"
        android:layout_marginBottom="160dp"
        android:onClick="startGame"
        android:text="@string/startButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroupForLangSelection"
        android:layout_width="104dp"
        android:layout_height="182dp"
        android:layout_marginTop="244dp"
        android:layout_marginEnd="72dp"
        android:layout_marginRight="72dp"
        android:measureWithLargestChild="true"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <RadioButton
            android:id="@+id/langChoiceEn"
            android:layout_width="94dp"
            android:layout_height="wrap_content"
            android:text="@string/english" />

        <RadioButton
            android:id="@+id/langChoicePl"
            android:layout_width="95dp"
            android:layout_height="wrap_content"
            android:text="@string/polish" />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/accept"
            android:onClick="changeLanguage"/>
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>